refactor: Add ViewConstants